# densityweight

./: README.md  pyproject.toml
densityweight/: __init__.py  cli.py  core.py  curves.py  density.py  synth.py  validate.py
tests/: test_core.py
